--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
 
     <aside>
         
+        <div class="container-logo">
+
+            <div class="center-logo">
+
+                <div class="logo">
+                    <img src="./odin-lined.png" alt="Logo del sitio web de Odin Project">
+                </div>
+                
+                <p class="odin">ODIN</p>
+
+            </div>
+
+        </div>
+
+        <p>
+            Photo by <a href="https://unsplash.com/es/@davidlangdesign?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">David Lang</a> on <a href="https://unsplash.com/es/fotos/un-cuerpo-de-agua-con-casas-en-una-colina-en-la-distancia-Tg1aGZWAcf8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+        </p>
+
     </aside>
 
 
@@ -76,21 +94,5 @@
         </div>
     </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- Dar creditos al autor
-
-    <p>creditos del autor Foto de <a href="https://unsplash.com/es/@davidlangdesign?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">David Lang</a> en <a href="https://unsplash.com/es/fotos/un-cuerpo-de-agua-con-casas-en-una-colina-en-la-distancia-Tg1aGZWAcf8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
-    </p> -->
 </body>
 </html>
